RESOLVED FIXED215828
Web Inspector: button for Inspector^2 doesn't work without setting default for DeveloperExtrasEnabled
https://bugs.webkit.org/show_bug.cgi?id=215828
Summary Web Inspector: button for Inspector^2 doesn't work without setting default fo...
Blaze Burg
Reported 2020-08-25 16:39:12 PDT
This should be automatically set up and require no extra config.
Attachments
Patch (4.21 KB, patch)
2020-08-26 10:37 PDT, Blaze Burg
no flags
Patch (4.09 KB, patch)
2020-08-26 22:10 PDT, Blaze Burg
no flags
Patch (4.13 KB, patch)
2020-08-26 23:08 PDT, Blaze Burg
no flags
Blaze Burg
Comment 1 2020-08-26 10:37:41 PDT
Devin Rousso
Comment 2 2020-08-26 10:43:24 PDT
Comment on attachment 407310 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=407310&action=review r=me, nice solution :) > Source/WebInspectorUI/ChangeLog:11 > + Drive-by: because the Inspector^2 button is text-only and has no > + .name element, the '2' button does not become dimmed when the > + window is inactive, unlike every other item in the tab bar. > + Fix this by coloring the text-only button similar to tab labels. IMO, since this is an engineering only feature I don't think we need to care about this 😅 at the very least please put the styles in Source/WebInspectorUI/UserInterface/Debug/Bootstrap.css so it isn't shipped (and maybe include a comment in UserInterface/Views/ButtonNavigationItem.css so that we know there's some related styles elsewhere)
Blaze Burg
Comment 3 2020-08-26 17:01:42 PDT
(In reply to Devin Rousso from comment #2) > Comment on attachment 407310 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=407310&action=review > > r=me, nice solution :) > > > Source/WebInspectorUI/ChangeLog:11 > > + Drive-by: because the Inspector^2 button is text-only and has no > > + .name element, the '2' button does not become dimmed when the > > + window is inactive, unlike every other item in the tab bar. > > + Fix this by coloring the text-only button similar to tab labels. > > IMO, since this is an engineering only feature I don't think we need to care > about this 😅 > > at the very least please put the styles in > Source/WebInspectorUI/UserInterface/Debug/Bootstrap.css so it isn't shipped > (and maybe include a comment in UserInterface/Views/ButtonNavigationItem.css > so that we know there's some related styles elsewhere) OK
Blaze Burg
Comment 4 2020-08-26 22:10:49 PDT
EWS
Comment 5 2020-08-26 22:46:34 PDT
/Volumes/Data/worker/Commit-Queue/build/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
Blaze Burg
Comment 6 2020-08-26 23:08:54 PDT
EWS
Comment 7 2020-08-26 23:46:59 PDT
Committed r266225: <https://trac.webkit.org/changeset/266225> All reviewed patches have been landed. Closing bug and clearing flags on attachment 407377 [details].
Radar WebKit Bug Importer
Comment 8 2020-08-26 23:47:14 PDT
Note You need to log in before you can comment on or make changes to this bug.