Web Inspector: button for Inspector^2 doesn't work without setting default for DeveloperExtrasEnabled https://bugs.webkit.org/show_bug.cgi?id=215828

Reviewed by Devin Rousso.

Source/WebCore:

* inspector/InspectorFrontendHost.cpp:
(WebCore::InspectorFrontendHost::inspectInspector):
Explicitly set DeveloperExtrasEnabled for the Inspector
web view so that the Inspect context menu appears and
so the [2] button works as expected.

Source/WebInspectorUI:

Drive-by: because the Inspector^2 button is text-only and has no
.name element, the '2' button does not become dimmed when the
window is inactive, unlike every other item in the tab bar.
Fix this by coloring the text-only button similar to tab labels.

* UserInterface/Debug/Bootstrap.css:
(body.window-inactive .tab-bar > .navigation-bar .item.button.text-only):
(.tab-bar > .navigation-bar .item.button.text-only):
(.tab-bar > .navigation-bar .item.button.text-only:not(.selected):hover):
(.tab-bar > .navigation-bar .item.button.text-only:not(.disabled).selected):
(body.window-inactive .tab-bar > .navigation-bar .item.button.text-only:not(.disabled).selected >):


Canonical link: https://commits.webkit.org/228679@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266225 268f45cc-cd09-0410-ab3c-d52691b4dbfc